[gd_scene load_steps=21 format=3 uid="uid://dxhxbx2dis4j8"]

[ext_resource type="PackedScene" uid="uid://bghitxg1x5ima" path="res://donkey_pocket_shrek_and_animations/scene.gltf" id="1_js5ry"]
[ext_resource type="Script" path="res://sketchfab_scene.gd" id="2_q1fhi"]
[ext_resource type="Script" path="res://area_3d.gd" id="3_7ygmx"]
[ext_resource type="Texture2D" uid="uid://dknvwsrpc324o" path="res://donkey_pocket_shrek_and_animations/пощекотать.png" id="6_t1yf8"]
[ext_resource type="Texture2D" uid="uid://byc1on7nyyae6" path="res://donkey_pocket_shrek_and_animations/поцеловать.png" id="7_8krsx"]
[ext_resource type="Texture2D" uid="uid://o8stj6jgqr4i" path="res://donkey_pocket_shrek_and_animations/усыпить.png" id="8_eh3h6"]
[ext_resource type="Texture2D" uid="uid://b50sqyklxickn" path="res://donkey_pocket_shrek_and_animations/накормить.svg" id="9_ywsg0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2jom4"]

[sub_resource type="GDScript" id="GDScript_h6ijy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7w407"]
render_priority = 10
albedo_texture = ExtResource("9_ywsg0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_557ep"]
albedo_texture = ExtResource("6_t1yf8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w1fyv"]
render_priority = 5
next_pass = SubResource("StandardMaterial3D_557ep")
albedo_texture = ExtResource("6_t1yf8")

[sub_resource type="PlaneMesh" id="PlaneMesh_y0tee"]
material = SubResource("StandardMaterial3D_w1fyv")
size = Vector2(0.165, 0.05)
orientation = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_bjsd8"]
size = Vector3(0.819336, 0.0337526, 0.220764)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_smut4"]
albedo_texture = ExtResource("6_t1yf8")

[sub_resource type="PlaneMesh" id="PlaneMesh_00f5x"]
material = SubResource("StandardMaterial3D_smut4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eedy6"]
albedo_texture = ExtResource("8_eh3h6")

[sub_resource type="PlaneMesh" id="PlaneMesh_p073i"]
size = Vector2(0.165, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_frlxi"]
albedo_texture = ExtResource("7_8krsx")

[sub_resource type="PlaneMesh" id="PlaneMesh_0btwu"]

[node name="Sketchfab_Scene" instance=ExtResource("1_js5ry")]
script = ExtResource("2_q1fhi")

[node name="Donkey Avatar anims_fbx" parent="Sketchfab_model" index="0"]
transform = Transform3D(0.075, 0, 0, 0, -3.27835e-09, -0.075, 0, 0.075, -3.27835e-09, 0, 0, 0)

[node name="Skeleton3D" parent="Sketchfab_model/Donkey Avatar anims_fbx/Object_2/RootNode/Object_4" index="0"]
bones/3/position = Vector3(-16.9895, 81.9066, -39.5464)
bones/3/rotation = Quaternion(0.726262, 0.149291, -0.217308, 0.634849)
bones/4/rotation = Quaternion(0.0122984, 0.0233111, -0.0196999, 0.999458)
bones/5/position = Vector3(3.55271e-15, -1.42109e-14, -1.42109e-14)
bones/5/rotation = Quaternion(-1.08467e-08, 6.93889e-18, 2.77556e-17, 1)
bones/7/position = Vector3(-0.0275799, 20.6548, 0.00492273)
bones/7/rotation = Quaternion(-0.0466857, 0.0182356, 0.0364544, 0.998078)
bones/8/position = Vector3(0, -3.55271e-15, 2.84217e-14)
bones/8/rotation = Quaternion(-3.86933e-07, 3.44772e-27, 1.6188e-25, 1)
bones/9/position = Vector3(-0.0579036, 19.5371, 0.00407155)
bones/9/rotation = Quaternion(-0.0684608, 0.0171174, 0.0296348, 0.997067)
bones/10/position = Vector3(1.77636e-15, -3.55271e-15, 4.26326e-14)
bones/10/rotation = Quaternion(-4.0766e-16, -1.47451e-17, 4.50478e-33, 1)
bones/11/position = Vector3(-0.0105891, 16.9258, -0.0147316)
bones/11/rotation = Quaternion(-0.190651, 0.0135228, 0.0258829, 0.981223)
bones/12/position = Vector3(3.55271e-15, 28.0513, -4.9738e-14)
bones/12/rotation = Quaternion(-0.222685, -0.0815424, 0.058002, 0.969741)
bones/13/position = Vector3(0, 15.132, 2.13163e-14)
bones/13/rotation = Quaternion(-0.0432077, 0.0580061, 0.0503392, 0.99611)
bones/14/position = Vector3(3.55271e-15, 18.357, 7.10543e-15)
bones/14/rotation = Quaternion(-0.0653395, 0.122136, -0.0369376, 0.989671)
bones/15/rotation = Quaternion(-0.556674, -0.00791385, 0.00617413, 0.830671)
bones/16/rotation = Quaternion(-0.256413, -0.00806842, 0.0200593, 0.966326)
bones/17/position = Vector3(0.0271586, 14.3864, 20.9189)
bones/17/rotation = Quaternion(-0.0564166, -4.02357e-06, -5.33144e-05, 0.998407)
bones/18/position = Vector3(0.0270188, 15.9099, 11.0491)
bones/18/rotation = Quaternion(-0.291099, 8.70825e-06, -5.27521e-05, 0.956693)
bones/19/position = Vector3(0.027673, 26.7102, 30.3207)
bones/19/rotation = Quaternion(-0.603434, 2.63817e-05, -4.6504e-05, 0.797413)
bones/20/position = Vector3(1.24351e-05, 14.5607, 35.6474)
bones/20/rotation = Quaternion(-0.128121, -1.7635e-07, -5.34658e-05, 0.991759)
bones/21/position = Vector3(0.026947, 19.5371, 43.5297)
bones/21/rotation = Quaternion(-0.198664, 3.64475e-06, -5.33417e-05, 0.980068)
bones/22/position = Vector3(-3.55271e-15, 10.6764, -0.98552)
bones/22/rotation = Quaternion(-0.00487529, 0.00703722, 0.0119958, 0.999891)
bones/23/rotation = Quaternion(0.0704508, -1.06959e-05, -5.23853e-05, 0.997515)
bones/24/position = Vector3(-1.42109e-14, -1.05256, 36.2704)
bones/25/rotation = Quaternion(-0.154497, 2.52782e-17, 1.79993e-17, 0.987993)
bones/26/rotation = Quaternion(0.280295, 1.88632e-17, -3.44227e-17, 0.959914)
bones/27/rotation = Quaternion(-0.184925, -3.75423e-17, 4.9421e-17, 0.982753)
bones/28/position = Vector3(7.71272, 0.436232, 27.8857)
bones/28/rotation = Quaternion(0.0105739, 0.618399, 0.0956151, 0.779954)
bones/29/position = Vector3(6.40645, -1.42637, 35.184)
bones/29/rotation = Quaternion(0.0413284, 0.550946, 0.062043, 0.831204)
bones/30/rotation = Quaternion(0.135191, 0.30101, -0.00461611, 0.943978)
bones/31/position = Vector3(-7.6697, 0.379142, 28.6548)
bones/31/rotation = Quaternion(0.779781, -0.0891547, 0.619388, -0.0187542)
bones/32/position = Vector3(-6.33169, -1.36017, 35.3679)
bones/32/rotation = Quaternion(0.83119, -0.0621305, 0.550962, -0.0412709)
bones/33/rotation = Quaternion(0.943974, 0.0045179, 0.301038, -0.135159)
bones/34/position = Vector3(2.30131, 37.0714, -2.55218)
bones/34/rotation = Quaternion(-0.363018, 0.0208658, 0.0952813, 0.926663)
bones/35/position = Vector3(8.90156, 37.3886, -4.26847)
bones/35/rotation = Quaternion(-0.358063, 0.109586, -0.0965904, 0.9222)
bones/36/position = Vector3(13.1133, 31.5419, -1.91258)
bones/36/rotation = Quaternion(-0.391412, 0.0799677, -0.168976, 0.901027)
bones/37/position = Vector3(14.6308, 12.9788, 5.88371)
bones/37/rotation = Quaternion(-0.320722, 1.03452e-05, -5.24557e-05, 0.947173)
bones/37/scale = Vector3(1.28953, 1.28953, 1.28953)
bones/38/rotation = Quaternion(-0.241041, -0.684842, 0.113707, 0.678204)
bones/39/rotation = Quaternion(0.0337477, -0.099961, -0.240345, 0.964937)
bones/40/rotation = Quaternion(-0.0074364, -0.0895325, -0.146384, 0.98514)
bones/41/rotation = Quaternion(-0.0737539, 0.0581127, -0.086404, 0.991825)
bones/42/rotation = Quaternion(-0.672789, 0.0658111, -0.0304868, 0.736271)
bones/43/position = Vector3(9.86014, 16.3378, 18.4684)
bones/43/rotation = Quaternion(0.13287, 0.689205, 0.229094, 0.674432)
bones/43/scale = Vector3(1, 0.717596, 1)
bones/44/position = Vector3(9.80075, 16.0268, 27.1603)
bones/44/rotation = Quaternion(-0.0798556, 0.658405, -0.0241503, 0.748026)
bones/45/position = Vector3(8.70361, 17.5393, 35.2348)
bones/45/rotation = Quaternion(-0.103006, 0.559691, -0.0821308, 0.818163)
bones/46/position = Vector3(6.19919, 18.3392, 40.0204)
bones/46/rotation = Quaternion(-0.178854, 0.355892, -0.0656595, 0.914899)
bones/47/position = Vector3(-3.26969, 36.2409, -1.91735)
bones/47/rotation = Quaternion(0.928162, -0.0798697, 0.0335973, 0.361949)
bones/48/position = Vector3(-9.3125, 34.7871, -2.25593)
bones/48/rotation = Quaternion(0.919485, 0.111909, 0.122177, 0.356507)
bones/49/position = Vector3(-13.8279, 29.8529, -0.980531)
bones/49/rotation = Quaternion(0.897121, 0.183667, 0.0930678, 0.390869)
bones/50/position = Vector3(-14.336, 11.8661, 6.40551)
bones/50/scale = Vector3(1.28953, 1.28953, 1.28953)
bones/51/rotation = Quaternion(-0.799102, -0.162914, 0.542528, -0.201393)
bones/52/rotation = Quaternion(-0.0553226, 0.171876, -0.1564, 0.97105)
bones/53/rotation = Quaternion(-0.0458425, 0.0925845, -0.124688, 0.986803)
bones/54/rotation = Quaternion(0.996182, 0.0608884, 0.0548155, 0.0301689)
bones/55/rotation = Quaternion(0.741068, 0.0599478, 0.0570525, 0.66631)
bones/56/position = Vector3(-9.58883, 15.4296, 19.7951)
bones/56/rotation = Quaternion(0.762392, -0.127358, 0.62581, -0.104406)
bones/56/scale = Vector3(1, 0.775283, 1)
bones/57/position = Vector3(-9.57393, 15.5104, 28.0173)
bones/57/rotation = Quaternion(0.768935, 0.0580121, 0.629843, 0.0931224)
bones/58/position = Vector3(-8.59021, 16.9076, 35.5319)
bones/58/rotation = Quaternion(0.817807, 0.0855243, 0.559247, 0.105448)
bones/59/position = Vector3(-6.1243, 18.3884, 40.0221)
bones/59/rotation = Quaternion(0.914901, 0.06556, 0.355886, 0.178893)
bones/60/rotation = Quaternion(-0.27568, -0.212736, 0.0814079, 0.933872)
bones/61/rotation = Quaternion(-0.266407, -0.153447, 0.0604504, 0.949646)
bones/65/position = Vector3(0, 2.13163e-14, 2.13163e-14)
bones/65/rotation = Quaternion(8.52651e-14, -1.38778e-17, 1.18329e-30, 1)
bones/66/rotation = Quaternion(-0.539386, 0.0389852, -0.00233879, 0.841153)
bones/67/rotation = Quaternion(0.0575634, 0.144653, -0.747711, 0.645515)
bones/68/position = Vector3(21.6407, -4.09983e-12, 4.22773e-13)
bones/68/rotation = Quaternion(-0.0429235, -1.27836e-06, -8.3659e-08, 0.999078)
bones/70/position = Vector3(18.7631, 1.42109e-14, 0)
bones/70/rotation = Quaternion(0.167613, -0.168287, -0.0755383, 0.968442)
bones/71/position = Vector3(16.403, -8.95284e-13, -2.23821e-13)
bones/71/rotation = Quaternion(0.0482744, -0.0809016, 0.0150891, 0.995438)
bones/72/position = Vector3(8.33331, 4.36984e-13, 5.32907e-14)
bones/72/rotation = Quaternion(-0.00819624, 0.134709, 0.058703, 0.989111)
bones/76/rotation = Quaternion(0.793625, -0.0194542, 0.0756929, 0.603367)
bones/77/rotation = Quaternion(0.222158, 0.0286822, -0.745224, 0.628064)
bones/78/position = Vector3(-21.2215, 1.07257e-06, -2.35726e-05)
bones/78/rotation = Quaternion(-0.0429235, -2.00566e-06, -1.0642e-06, 0.999078)
bones/80/position = Vector3(-18.3996, -3.45181e-05, 4.9614e-06)
bones/80/rotation = Quaternion(-0.0507189, -0.109204, 0.010173, 0.992672)
bones/81/rotation = Quaternion(0.0174336, -0.133157, -0.000858302, 0.990941)
bones/82/rotation = Quaternion(-0.0084111, 0.139042, 0.0581576, 0.988541)
bones/87/position = Vector3(-4.76454, -21.6902, -2.92524)
bones/87/rotation = Quaternion(0.0717111, 0.390562, 0.902346, 0.167603)
bones/88/position = Vector3(1.06581e-14, 10.4085, 9.9476e-14)
bones/88/rotation = Quaternion(0.199576, 0.0729369, -0.0129995, 0.977078)
bones/89/position = Vector3(-2.84217e-14, 11.5728, -8.10019e-13)
bones/89/rotation = Quaternion(0.211979, -0.0778785, -0.0272698, 0.973784)
bones/90/position = Vector3(-7.10543e-15, 15.6266, -1.7053e-13)
bones/90/rotation = Quaternion(0.0432676, 0.064825, 0.0698416, 0.994509)
bones/91/rotation = Quaternion(0.651018, 0.512256, 0.41586, -0.375273)
bones/93/position = Vector3(30.316, 1.06581e-14, 1.77636e-14)
bones/93/rotation = Quaternion(0.0096646, 0.419946, -0.0340198, 0.90686)
bones/94/position = Vector3(25.759, -2.13163e-14, 7.10543e-15)
bones/94/rotation = Quaternion(-0.0149269, -0.455418, -0.0028589, 0.890148)
bones/95/position = Vector3(18.9433, 1.77636e-14, 7.10543e-14)
bones/95/rotation = Quaternion(0.0114182, -0.254099, 0.0337797, 0.966521)
bones/96/position = Vector3(8.20491, -2.4869e-14, -2.84217e-14)
bones/96/rotation = Quaternion(-0.00195884, 0.39828, -0.0167914, 0.917108)
bones/99/rotation = Quaternion(0.362601, 0.445986, -0.515731, 0.635325)
bones/101/position = Vector3(-30.316, -3.30747e-05, 9.20689e-05)
bones/101/rotation = Quaternion(0.00970971, 0.431203, -0.0349697, 0.901525)
bones/102/position = Vector3(-25.759, 3.71103e-05, -5.75548e-05)
bones/102/rotation = Quaternion(0.0412713, -0.361072, -0.000334514, 0.931624)
bones/103/rotation = Quaternion(0.00441078, -0.261613, 0.0185069, 0.964985)
bones/104/rotation = Quaternion(-0.0012207, 0.291527, -0.0152624, 0.95644)

[node name="Area3D" type="Area3D" parent="Sketchfab_model" index="1"]
script = ExtResource("3_7ygmx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/Area3D" index="0"]
transform = Transform3D(0.100501, 0, 0, 0, 0.100501, 0, 0, 0, 0.100501, -0.0159473, 0.0257491, 0.0471798)
shape = SubResource("BoxShape3D_2jom4")
script = SubResource("GDScript_h6ijy")

[node name="Camera3D" type="Camera3D" parent="." index="2"]
transform = Transform3D(-0.999303, -0.0372703, -0.0023024, -0.0371427, 0.998446, -0.0415348, 0.00384684, -0.0414203, -0.999134, 0, 0.133717, -0.213617)

[node name="Buttons" type="Node3D" parent="." index="3"]

[node name="Feed_Button" type="MeshInstance3D" parent="Buttons" index="0"]
transform = Transform3D(-0.5, 0, -1.35896e-07, 0, 0.5, 0, 7.54979e-08, 0, -0.9, 0.093945, 0.191441, 0.00393128)
material_override = SubResource("StandardMaterial3D_7w407")
lod_bias = 0.001
mesh = SubResource("PlaneMesh_y0tee")

[node name="Area3D" type="Area3D" parent="Buttons/Feed_Button" index="0"]
script = ExtResource("3_7ygmx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Buttons/Feed_Button/Area3D" index="0"]
transform = Transform3D(0.18, 0, 0, 0, 0.18, 0, 0, 0, 0.18, -1.49012e-08, 0, -0.00235017)
shape = SubResource("BoxShape3D_bjsd8")

[node name="Tickle_Button" type="MeshInstance3D" parent="Buttons" index="1"]
transform = Transform3D(-0.0352441, -8.74228e-08, 4.29693e-17, 0, -4.37114e-08, -0.0112445, 3.08113e-09, -1, 4.91512e-10, -0.0900111, 0.192308, -0.00654745)
mesh = SubResource("PlaneMesh_00f5x")

[node name="Area3D" type="Area3D" parent="Buttons/Tickle_Button" index="0"]
script = ExtResource("3_7ygmx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Buttons/Tickle_Button/Area3D" index="0"]
transform = Transform3D(-1.804, -2.72396e-07, 7.90378e-18, 2.72396e-07, -1.804, 4.23342e-12, 7.26456e-18, 4.23342e-12, 1.804, -0.0434601, 0.0010919, 0.0777378)
shape = SubResource("BoxShape3D_bjsd8")

[node name="Sleep_Button" type="MeshInstance3D" parent="Buttons" index="2"]
transform = Transform3D(-0.446141, -8.74228e-08, 1.48779e-15, 0, -4.37114e-08, -0.389335, 3.90029e-08, -1, 1.70184e-08, -0.0920897, 0.150997, 0)
material_override = SubResource("StandardMaterial3D_eedy6")
mesh = SubResource("PlaneMesh_p073i")

[node name="Area3D" type="Area3D" parent="Buttons/Sleep_Button" index="0"]
script = ExtResource("3_7ygmx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Buttons/Sleep_Button/Area3D" index="0"]
transform = Transform3D(0.11, 0, 0, 0, 0.11, -2.32406e-15, 0, 2.32406e-15, 0.11, 0, 0, 0)
shape = SubResource("BoxShape3D_bjsd8")

[node name="Kiss_Button" type="MeshInstance3D" parent="Buttons" index="3"]
transform = Transform3D(-0.039, 8.19137e-05, -3.99616e-14, 0, -5.87481e-08, -0.015, -2.37696e-06, -1.344, 6.55671e-10, 0.0952089, 0.149328, 0.00198695)
material_override = SubResource("StandardMaterial3D_frlxi")
mesh = SubResource("PlaneMesh_0btwu")

[node name="Area3D" type="Area3D" parent="Buttons/Kiss_Button" index="0"]
script = ExtResource("3_7ygmx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Buttons/Kiss_Button/Area3D" index="0"]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 1.41974e-12, -1.24118e-19, 1.41974e-12, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_bjsd8")

[connection signal="input_event" from="Sketchfab_model/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="input_event" from="Buttons/Feed_Button/Area3D" to="Buttons/Tickle_Button/Area3D" method="_on_feed_button_input_event"]
[connection signal="input_event" from="Buttons/Feed_Button/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="input_event" from="Buttons/Tickle_Button/Area3D" to="Buttons/Tickle_Button/Area3D" method="_on_tickle_button_input_event"]
[connection signal="input_event" from="Buttons/Tickle_Button/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="input_event" from="Buttons/Sleep_Button/Area3D" to="Buttons/Sleep_Button/Area3D" method="_on_sleep_button_input_event"]
[connection signal="input_event" from="Buttons/Kiss_Button/Area3D" to="Buttons/Kiss_Button/Area3D" method="_on_kiss_button_input_event"]
